src/snapshots/tuisage__ui__tests__snapshot_tokyo_night_theme.snap
---
source: src/ui.rs
assertion_line: 728
expression: output
---
┌ Command ─────────────────────────────────────────────────────────────────────────────────────────┐
│ $ mycli init                                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Commands ────────────────────────────┐┌ Flags ───────────────────────────────────────────────────┐
│▶ init        Initialize a new project││  [·] -t, --template = <basic|full|minimal>               │
│  config          Manage configuration││  ○ -f, --force                   Overwrite existing files│
│  │ set (add)       Set a config value││  [0] -v, --verbose [G]             Enable verbose logging│
│  │ get             Get a config value││  ○ -q, --quiet [G]                      Enable quiet mode│
│  │ list (ls)   List all config values││                                                          │
│  │ remove (rm)  Remove a config value││                                                          │
│  run                       Run a task││                                                          │
│  deploy        Deploy the application││                                                          │
│  plugin                Manage plugins││                                                          │
│  │ install (i)       Install a plugin││                                                          │
│  │ uninstall (rm)  Uninstall a plugin│└──────────────────────────────────────────────────────────┘
│  │ list (ls)   List installed plugins│┌ Arguments ───────────────────────────────────────────────┐
│  │ update              Update plugins││  ● <name> = (empty)                          Project name│
│  version        Print the CLI version││                                                          │
│  help          Print help information││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
└──────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
 ↑↓ navigate  ⇥ next  / filter  ^u reset  ^r run  q quit                           T: [Tokyo Night]
